--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -595,10 +595,16 @@ a.back-to-top:hover, a.back-to-top:focus {
 .navbar-brand {
   position: relative;
   padding: 0px;
+  height: 100px;
+  display: flex;
+  align-items: center;
 }
 
 .navbar-brand img {
-  width: 75%;
+  width: auto;
+  height: 100px;
+  max-width: 200px;
+  object-fit: contain;
 }
 
 .top-nav-collapse {
@@ -693,6 +699,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 
 .navbar {
   padding: 0;
+  min-height: 60px;
 }
 
 .navbar li.active a.nav-link {
@@ -2177,11 +2184,21 @@ a.back-to-top:hover, a.back-to-top:focus {
 #main-slide .carousel-caption {
   color: #fff;
   position: absolute;
-  top: 35%;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  max-width: 1200px;
+  padding: 0 30px;
+  z-index: 1;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 #main-slide .carousel-caption .btn {
-  margin: 25px 25px 0px 0px;
+  margin: 10px 8px;
+  display: inline-block;
+  min-width: 150px;
 }
 
 #main-slide .carousel-control-next,
